MITScript/parser.output
Terminals unused in grammar

   T_then


Grammar

    0 $accept: Program $end

    1 Program: StatementList

    2 StatementList: %empty
    3              | Statement StatementList

    4 Statement: Assignment
    5          | CallStatement
    6          | Global
    7          | IfStatement
    8          | WhileLoop
    9          | Block
   10          | Return

   11 Global: T_global T_ident ';'

   12 Assignment: LHS '=' Expression ';'

   13 CallStatement: Call ';'

   14 IfStatement: T_if '(' Expression ')' Statement MaybeElse

   15 MaybeElse: %empty
   16          | T_else Statement

   17 WhileLoop: T_while '(' Expression ')' Statement

   18 Block: '{' StatementList '}'

   19 Return: T_return Expression ';'

   20 Expression: Function
   21           | Boolean
   22           | Record

   23 Function: T_fun '(' NameList ')' Block

   24 NameList: %empty
   25         | T_ident NameList

   26 Boolean: BooleanRest Conjunction

   27 BooleanRest: %empty
   28            | Boolean '|'

   29 Conjunction: ConjunctionRest BoolUnit

   30 ConjunctionRest: %empty
   31                | Conjunction '&'

   32 BoolUnit: Predicate
   33         | '!' Predicate

   34 Predicate: Arithmetic
   35          | Arithmetic '<' Arithmetic
   36          | Arithmetic '>' Arithmetic
   37          | Arithmetic T_leq Arithmetic
   38          | Arithmetic T_geq Arithmetic
   39          | Arithmetic T_eq Arithmetic

   40 Arithmetic: ArithmeticRest Product

   41 ArithmeticRest: %empty
   42               | Arithmetic '+'
   43               | Arithmetic '-'

   44 Product: ProductRest Unit

   45 ProductRest: %empty
   46            | Product '*'
   47            | Product '/'

   48 Unit: '-' LHSorConstant
   49     | LHSorConstant

   50 LHSorConstant: LHS
   51              | Constant
   52              | Call
   53              | '(' Boolean ')'

   54 Constant: T_int
   55         | T_string
   56         | T_none
   57         | T_true
   58         | T_false

   59 LHS: T_ident
   60    | LHS '.' T_ident
   61    | LHS '[' Expression ']'

   62 Call: LHS '(' ArgList ')'

   63 ArgList: %empty
   64        | Expression MaybeMore

   65 MaybeMore: %empty
   66          | ',' Expression MaybeMore

   67 Record: '{' FieldList '}'

   68 FieldList: %empty
   69          | T_ident ':' Expression ';' FieldList


Terminals, with rules where they appear

$end (0) 0
'!' (33) 33
'&' (38) 31
'(' (40) 14 17 23 53 62
')' (41) 14 17 23 53 62
'*' (42) 46
'+' (43) 42
',' (44) 66
'-' (45) 43 48
'.' (46) 60
'/' (47) 47
':' (58) 69
';' (59) 11 12 13 19 69
'<' (60) 35
'=' (61) 12
'>' (62) 36
'[' (91) 61
']' (93) 61
'{' (123) 18 67
'|' (124) 28
'}' (125) 18 67
error (256)
T_int (258) 54
T_string (259) 55
T_ident (260) 11 25 59 60 69
T_then (261)
T_else (262) 16
T_global (263) 11
T_if (264) 14
T_while (265) 17
T_return (266) 19
T_fun (267) 23
T_geq (268) 38
T_leq (269) 37
T_eq (270) 39
T_none (271) 56
T_true (272) 57
T_false (273) 58
"then" (274)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
Program (41)
    on left: 1, on right: 0
StatementList (42)
    on left: 2 3, on right: 1 3 18
Statement (43)
    on left: 4 5 6 7 8 9 10, on right: 3 14 16 17
Global (44)
    on left: 11, on right: 6
Assignment (45)
    on left: 12, on right: 4
CallStatement (46)
    on left: 13, on right: 5
IfStatement (47)
    on left: 14, on right: 7
MaybeElse (48)
    on left: 15 16, on right: 14
WhileLoop (49)
    on left: 17, on right: 8
Block (50)
    on left: 18, on right: 9 23
Return (51)
    on left: 19, on right: 10
Expression (52)
    on left: 20 21 22, on right: 12 14 17 19 61 64 66 69
Function (53)
    on left: 23, on right: 20
NameList (54)
    on left: 24 25, on right: 23 25
Boolean (55)
    on left: 26, on right: 21 28 53
BooleanRest (56)
    on left: 27 28, on right: 26
Conjunction (57)
    on left: 29, on right: 26 31
ConjunctionRest (58)
    on left: 30 31, on right: 29
BoolUnit (59)
    on left: 32 33, on right: 29
Predicate (60)
    on left: 34 35 36 37 38 39, on right: 32 33
Arithmetic (61)
    on left: 40, on right: 34 35 36 37 38 39 42 43
ArithmeticRest (62)
    on left: 41 42 43, on right: 40
Product (63)
    on left: 44, on right: 40 46 47
ProductRest (64)
    on left: 45 46 47, on right: 44
Unit (65)
    on left: 48 49, on right: 44
LHSorConstant (66)
    on left: 50 51 52 53, on right: 48 49
Constant (67)
    on left: 54 55 56 57 58, on right: 51
LHS (68)
    on left: 59 60 61, on right: 12 50 60 61 62
Call (69)
    on left: 62, on right: 13 52
ArgList (70)
    on left: 63 64, on right: 62
MaybeMore (71)
    on left: 65 66, on right: 64 66
Record (72)
    on left: 67, on right: 22
FieldList (73)
    on left: 68 69, on right: 67 69


State 0

    0 $accept: . Program $end

    T_ident   shift, and go to state 1
    T_global  shift, and go to state 2
    T_if      shift, and go to state 3
    T_while   shift, and go to state 4
    T_return  shift, and go to state 5
    '{'       shift, and go to state 6

    $default  reduce using rule 2 (StatementList)

    Program        go to state 7
    StatementList  go to state 8
    Statement      go to state 9
    Global         go to state 10
    Assignment     go to state 11
    CallStatement  go to state 12
    IfStatement    go to state 13
    WhileLoop      go to state 14
    Block          go to state 15
    Return         go to state 16
    LHS            go to state 17
    Call           go to state 18


State 1

   59 LHS: T_ident .

    $default  reduce using rule 59 (LHS)


State 2

   11 Global: T_global . T_ident ';'

    T_ident  shift, and go to state 19


State 3

   14 IfStatement: T_if . '(' Expression ')' Statement MaybeElse

    '('  shift, and go to state 20


State 4

   17 WhileLoop: T_while . '(' Expression ')' Statement

    '('  shift, and go to state 21


State 5

   19 Return: T_return . Expression ';'

    T_fun  shift, and go to state 22
    '{'    shift, and go to state 23

    $default  reduce using rule 27 (BooleanRest)

    Expression   go to state 24
    Function     go to state 25
    Boolean      go to state 26
    BooleanRest  go to state 27
    Record       go to state 28


State 6

   18 Block: '{' . StatementList '}'

    T_ident   shift, and go to state 1
    T_global  shift, and go to state 2
    T_if      shift, and go to state 3
    T_while   shift, and go to state 4
    T_return  shift, and go to state 5
    '{'       shift, and go to state 6

    $default  reduce using rule 2 (StatementList)

    StatementList  go to state 29
    Statement      go to state 9
    Global         go to state 10
    Assignment     go to state 11
    CallStatement  go to state 12
    IfStatement    go to state 13
    WhileLoop      go to state 14
    Block          go to state 15
    Return         go to state 16
    LHS            go to state 17
    Call           go to state 18


State 7

    0 $accept: Program . $end

    $end  shift, and go to state 30


State 8

    1 Program: StatementList .

    $default  reduce using rule 1 (Program)


State 9

    3 StatementList: Statement . StatementList

    T_ident   shift, and go to state 1
    T_global  shift, and go to state 2
    T_if      shift, and go to state 3
    T_while   shift, and go to state 4
    T_return  shift, and go to state 5
    '{'       shift, and go to state 6

    $default  reduce using rule 2 (StatementList)

    StatementList  go to state 31
    Statement      go to state 9
    Global         go to state 10
    Assignment     go to state 11
    CallStatement  go to state 12
    IfStatement    go to state 13
    WhileLoop      go to state 14
    Block          go to state 15
    Return         go to state 16
    LHS            go to state 17
    Call           go to state 18


State 10

    6 Statement: Global .

    $default  reduce using rule 6 (Statement)


State 11

    4 Statement: Assignment .

    $default  reduce using rule 4 (Statement)


State 12

    5 Statement: CallStatement .

    $default  reduce using rule 5 (Statement)


State 13

    7 Statement: IfStatement .

    $default  reduce using rule 7 (Statement)


State 14

    8 Statement: WhileLoop .

    $default  reduce using rule 8 (Statement)


State 15

    9 Statement: Block .

    $default  reduce using rule 9 (Statement)


State 16

   10 Statement: Return .

    $default  reduce using rule 10 (Statement)


State 17

   12 Assignment: LHS . '=' Expression ';'
   60 LHS: LHS . '.' T_ident
   61    | LHS . '[' Expression ']'
   62 Call: LHS . '(' ArgList ')'

    '='  shift, and go to state 32
    '('  shift, and go to state 33
    '.'  shift, and go to state 34
    '['  shift, and go to state 35


State 18

   13 CallStatement: Call . ';'

    ';'  shift, and go to state 36


State 19

   11 Global: T_global T_ident . ';'

    ';'  shift, and go to state 37


State 20

   14 IfStatement: T_if '(' . Expression ')' Statement MaybeElse

    T_fun  shift, and go to state 22
    '{'    shift, and go to state 23

    $default  reduce using rule 27 (BooleanRest)

    Expression   go to state 38
    Function     go to state 25
    Boolean      go to state 26
    BooleanRest  go to state 27
    Record       go to state 28


State 21

   17 WhileLoop: T_while '(' . Expression ')' Statement

    T_fun  shift, and go to state 22
    '{'    shift, and go to state 23

    $default  reduce using rule 27 (BooleanRest)

    Expression   go to state 39
    Function     go to state 25
    Boolean      go to state 26
    BooleanRest  go to state 27
    Record       go to state 28


State 22

   23 Function: T_fun . '(' NameList ')' Block

    '('  shift, and go to state 40


State 23

   67 Record: '{' . FieldList '}'

    T_ident  shift, and go to state 41

    $default  reduce using rule 68 (FieldList)

    FieldList  go to state 42


State 24

   19 Return: T_return Expression . ';'

    ';'  shift, and go to state 43


State 25

   20 Expression: Function .

    $default  reduce using rule 20 (Expression)


State 26

   21 Expression: Boolean .
   28 BooleanRest: Boolean . '|'

    '|'  shift, and go to state 44

    $default  reduce using rule 21 (Expression)


State 27

   26 Boolean: BooleanRest . Conjunction

    $default  reduce using rule 30 (ConjunctionRest)

    Conjunction      go to state 45
    ConjunctionRest  go to state 46


State 28

   22 Expression: Record .

    $default  reduce using rule 22 (Expression)


State 29

   18 Block: '{' StatementList . '}'

    '}'  shift, and go to state 47


State 30

    0 $accept: Program $end .

    $default  accept


State 31

    3 StatementList: Statement StatementList .

    $default  reduce using rule 3 (StatementList)


State 32

   12 Assignment: LHS '=' . Expression ';'

    T_fun  shift, and go to state 22
    '{'    shift, and go to state 23

    $default  reduce using rule 27 (BooleanRest)

    Expression   go to state 48
    Function     go to state 25
    Boolean      go to state 26
    BooleanRest  go to state 27
    Record       go to state 28


State 33

   62 Call: LHS '(' . ArgList ')'

    T_fun  shift, and go to state 22
    '{'    shift, and go to state 23

    ')'       reduce using rule 63 (ArgList)
    $default  reduce using rule 27 (BooleanRest)

    Expression   go to state 49
    Function     go to state 25
    Boolean      go to state 26
    BooleanRest  go to state 27
    ArgList      go to state 50
    Record       go to state 28


State 34

   60 LHS: LHS '.' . T_ident

    T_ident  shift, and go to state 51


State 35

   61 LHS: LHS '[' . Expression ']'

    T_fun  shift, and go to state 22
    '{'    shift, and go to state 23

    $default  reduce using rule 27 (BooleanRest)

    Expression   go to state 52
    Function     go to state 25
    Boolean      go to state 26
    BooleanRest  go to state 27
    Record       go to state 28


State 36

   13 CallStatement: Call ';' .

    $default  reduce using rule 13 (CallStatement)


State 37

   11 Global: T_global T_ident ';' .

    $default  reduce using rule 11 (Global)


State 38

   14 IfStatement: T_if '(' Expression . ')' Statement MaybeElse

    ')'  shift, and go to state 53


State 39

   17 WhileLoop: T_while '(' Expression . ')' Statement

    ')'  shift, and go to state 54


State 40

   23 Function: T_fun '(' . NameList ')' Block

    T_ident  shift, and go to state 55

    $default  reduce using rule 24 (NameList)

    NameList  go to state 56


State 41

   69 FieldList: T_ident . ':' Expression ';' FieldList

    ':'  shift, and go to state 57


State 42

   67 Record: '{' FieldList . '}'

    '}'  shift, and go to state 58


State 43

   19 Return: T_return Expression ';' .

    $default  reduce using rule 19 (Return)


State 44

   28 BooleanRest: Boolean '|' .

    $default  reduce using rule 28 (BooleanRest)


State 45

   26 Boolean: BooleanRest Conjunction .
   31 ConjunctionRest: Conjunction . '&'

    '&'  shift, and go to state 59

    $default  reduce using rule 26 (Boolean)


State 46

   29 Conjunction: ConjunctionRest . BoolUnit

    '!'  shift, and go to state 60

    $default  reduce using rule 41 (ArithmeticRest)

    BoolUnit        go to state 61
    Predicate       go to state 62
    Arithmetic      go to state 63
    ArithmeticRest  go to state 64


State 47

   18 Block: '{' StatementList '}' .

    $default  reduce using rule 18 (Block)


State 48

   12 Assignment: LHS '=' Expression . ';'

    ';'  shift, and go to state 65


State 49

   64 ArgList: Expression . MaybeMore

    ','  shift, and go to state 66

    $default  reduce using rule 65 (MaybeMore)

    MaybeMore  go to state 67


State 50

   62 Call: LHS '(' ArgList . ')'

    ')'  shift, and go to state 68


State 51

   60 LHS: LHS '.' T_ident .

    $default  reduce using rule 60 (LHS)


State 52

   61 LHS: LHS '[' Expression . ']'

    ']'  shift, and go to state 69


State 53

   14 IfStatement: T_if '(' Expression ')' . Statement MaybeElse

    T_ident   shift, and go to state 1
    T_global  shift, and go to state 2
    T_if      shift, and go to state 3
    T_while   shift, and go to state 4
    T_return  shift, and go to state 5
    '{'       shift, and go to state 6

    Statement      go to state 70
    Global         go to state 10
    Assignment     go to state 11
    CallStatement  go to state 12
    IfStatement    go to state 13
    WhileLoop      go to state 14
    Block          go to state 15
    Return         go to state 16
    LHS            go to state 17
    Call           go to state 18


State 54

   17 WhileLoop: T_while '(' Expression ')' . Statement

    T_ident   shift, and go to state 1
    T_global  shift, and go to state 2
    T_if      shift, and go to state 3
    T_while   shift, and go to state 4
    T_return  shift, and go to state 5
    '{'       shift, and go to state 6

    Statement      go to state 71
    Global         go to state 10
    Assignment     go to state 11
    CallStatement  go to state 12
    IfStatement    go to state 13
    WhileLoop      go to state 14
    Block          go to state 15
    Return         go to state 16
    LHS            go to state 17
    Call           go to state 18


State 55

   25 NameList: T_ident . NameList

    T_ident  shift, and go to state 55

    $default  reduce using rule 24 (NameList)

    NameList  go to state 72


State 56

   23 Function: T_fun '(' NameList . ')' Block

    ')'  shift, and go to state 73


State 57

   69 FieldList: T_ident ':' . Expression ';' FieldList

    T_fun  shift, and go to state 22
    '{'    shift, and go to state 23

    $default  reduce using rule 27 (BooleanRest)

    Expression   go to state 74
    Function     go to state 25
    Boolean      go to state 26
    BooleanRest  go to state 27
    Record       go to state 28


State 58

   67 Record: '{' FieldList '}' .

    $default  reduce using rule 67 (Record)


State 59

   31 ConjunctionRest: Conjunction '&' .

    $default  reduce using rule 31 (ConjunctionRest)


State 60

   33 BoolUnit: '!' . Predicate

    $default  reduce using rule 41 (ArithmeticRest)

    Predicate       go to state 75
    Arithmetic      go to state 63
    ArithmeticRest  go to state 64


State 61

   29 Conjunction: ConjunctionRest BoolUnit .

    $default  reduce using rule 29 (Conjunction)


State 62

   32 BoolUnit: Predicate .

    $default  reduce using rule 32 (BoolUnit)


State 63

   34 Predicate: Arithmetic .
   35          | Arithmetic . '<' Arithmetic
   36          | Arithmetic . '>' Arithmetic
   37          | Arithmetic . T_leq Arithmetic
   38          | Arithmetic . T_geq Arithmetic
   39          | Arithmetic . T_eq Arithmetic
   42 ArithmeticRest: Arithmetic . '+'
   43               | Arithmetic . '-'

    T_geq  shift, and go to state 76
    T_leq  shift, and go to state 77
    T_eq   shift, and go to state 78
    '<'    shift, and go to state 79
    '>'    shift, and go to state 80
    '+'    shift, and go to state 81
    '-'    shift, and go to state 82

    $default  reduce using rule 34 (Predicate)


State 64

   40 Arithmetic: ArithmeticRest . Product

    $default  reduce using rule 45 (ProductRest)

    Product      go to state 83
    ProductRest  go to state 84


State 65

   12 Assignment: LHS '=' Expression ';' .

    $default  reduce using rule 12 (Assignment)


State 66

   66 MaybeMore: ',' . Expression MaybeMore

    T_fun  shift, and go to state 22
    '{'    shift, and go to state 23

    $default  reduce using rule 27 (BooleanRest)

    Expression   go to state 85
    Function     go to state 25
    Boolean      go to state 26
    BooleanRest  go to state 27
    Record       go to state 28


State 67

   64 ArgList: Expression MaybeMore .

    $default  reduce using rule 64 (ArgList)


State 68

   62 Call: LHS '(' ArgList ')' .

    $default  reduce using rule 62 (Call)


State 69

   61 LHS: LHS '[' Expression ']' .

    $default  reduce using rule 61 (LHS)


State 70

   14 IfStatement: T_if '(' Expression ')' Statement . MaybeElse

    T_else  shift, and go to state 86

    $default  reduce using rule 15 (MaybeElse)

    MaybeElse  go to state 87


State 71

   17 WhileLoop: T_while '(' Expression ')' Statement .

    $default  reduce using rule 17 (WhileLoop)


State 72

   25 NameList: T_ident NameList .

    $default  reduce using rule 25 (NameList)


State 73

   23 Function: T_fun '(' NameList ')' . Block

    '{'  shift, and go to state 6

    Block  go to state 88


State 74

   69 FieldList: T_ident ':' Expression . ';' FieldList

    ';'  shift, and go to state 89


State 75

   33 BoolUnit: '!' Predicate .

    $default  reduce using rule 33 (BoolUnit)


State 76

   38 Predicate: Arithmetic T_geq . Arithmetic

    $default  reduce using rule 41 (ArithmeticRest)

    Arithmetic      go to state 90
    ArithmeticRest  go to state 64


State 77

   37 Predicate: Arithmetic T_leq . Arithmetic

    $default  reduce using rule 41 (ArithmeticRest)

    Arithmetic      go to state 91
    ArithmeticRest  go to state 64


State 78

   39 Predicate: Arithmetic T_eq . Arithmetic

    $default  reduce using rule 41 (ArithmeticRest)

    Arithmetic      go to state 92
    ArithmeticRest  go to state 64


State 79

   35 Predicate: Arithmetic '<' . Arithmetic

    $default  reduce using rule 41 (ArithmeticRest)

    Arithmetic      go to state 93
    ArithmeticRest  go to state 64


State 80

   36 Predicate: Arithmetic '>' . Arithmetic

    $default  reduce using rule 41 (ArithmeticRest)

    Arithmetic      go to state 94
    ArithmeticRest  go to state 64


State 81

   42 ArithmeticRest: Arithmetic '+' .

    $default  reduce using rule 42 (ArithmeticRest)


State 82

   43 ArithmeticRest: Arithmetic '-' .

    $default  reduce using rule 43 (ArithmeticRest)


State 83

   40 Arithmetic: ArithmeticRest Product .
   46 ProductRest: Product . '*'
   47            | Product . '/'

    '*'  shift, and go to state 95
    '/'  shift, and go to state 96

    $default  reduce using rule 40 (Arithmetic)


State 84

   44 Product: ProductRest . Unit

    T_int     shift, and go to state 97
    T_string  shift, and go to state 98
    T_ident   shift, and go to state 1
    T_none    shift, and go to state 99
    T_true    shift, and go to state 100
    T_false   shift, and go to state 101
    '('       shift, and go to state 102
    '-'       shift, and go to state 103

    Unit           go to state 104
    LHSorConstant  go to state 105
    Constant       go to state 106
    LHS            go to state 107
    Call           go to state 108


State 85

   66 MaybeMore: ',' Expression . MaybeMore

    ','  shift, and go to state 66

    $default  reduce using rule 65 (MaybeMore)

    MaybeMore  go to state 109


State 86

   16 MaybeElse: T_else . Statement

    T_ident   shift, and go to state 1
    T_global  shift, and go to state 2
    T_if      shift, and go to state 3
    T_while   shift, and go to state 4
    T_return  shift, and go to state 5
    '{'       shift, and go to state 6

    Statement      go to state 110
    Global         go to state 10
    Assignment     go to state 11
    CallStatement  go to state 12
    IfStatement    go to state 13
    WhileLoop      go to state 14
    Block          go to state 15
    Return         go to state 16
    LHS            go to state 17
    Call           go to state 18


State 87

   14 IfStatement: T_if '(' Expression ')' Statement MaybeElse .

    $default  reduce using rule 14 (IfStatement)


State 88

   23 Function: T_fun '(' NameList ')' Block .

    $default  reduce using rule 23 (Function)


State 89

   69 FieldList: T_ident ':' Expression ';' . FieldList

    T_ident  shift, and go to state 41

    $default  reduce using rule 68 (FieldList)

    FieldList  go to state 111


State 90

   38 Predicate: Arithmetic T_geq Arithmetic .
   42 ArithmeticRest: Arithmetic . '+'
   43               | Arithmetic . '-'

    '+'  shift, and go to state 81
    '-'  shift, and go to state 82

    $default  reduce using rule 38 (Predicate)


State 91

   37 Predicate: Arithmetic T_leq Arithmetic .
   42 ArithmeticRest: Arithmetic . '+'
   43               | Arithmetic . '-'

    '+'  shift, and go to state 81
    '-'  shift, and go to state 82

    $default  reduce using rule 37 (Predicate)


State 92

   39 Predicate: Arithmetic T_eq Arithmetic .
   42 ArithmeticRest: Arithmetic . '+'
   43               | Arithmetic . '-'

    '+'  shift, and go to state 81
    '-'  shift, and go to state 82

    $default  reduce using rule 39 (Predicate)


State 93

   35 Predicate: Arithmetic '<' Arithmetic .
   42 ArithmeticRest: Arithmetic . '+'
   43               | Arithmetic . '-'

    '+'  shift, and go to state 81
    '-'  shift, and go to state 82

    $default  reduce using rule 35 (Predicate)


State 94

   36 Predicate: Arithmetic '>' Arithmetic .
   42 ArithmeticRest: Arithmetic . '+'
   43               | Arithmetic . '-'

    '+'  shift, and go to state 81
    '-'  shift, and go to state 82

    $default  reduce using rule 36 (Predicate)


State 95

   46 ProductRest: Product '*' .

    $default  reduce using rule 46 (ProductRest)


State 96

   47 ProductRest: Product '/' .

    $default  reduce using rule 47 (ProductRest)


State 97

   54 Constant: T_int .

    $default  reduce using rule 54 (Constant)


State 98

   55 Constant: T_string .

    $default  reduce using rule 55 (Constant)


State 99

   56 Constant: T_none .

    $default  reduce using rule 56 (Constant)


State 100

   57 Constant: T_true .

    $default  reduce using rule 57 (Constant)


State 101

   58 Constant: T_false .

    $default  reduce using rule 58 (Constant)


State 102

   53 LHSorConstant: '(' . Boolean ')'

    $default  reduce using rule 27 (BooleanRest)

    Boolean      go to state 112
    BooleanRest  go to state 27


State 103

   48 Unit: '-' . LHSorConstant

    T_int     shift, and go to state 97
    T_string  shift, and go to state 98
    T_ident   shift, and go to state 1
    T_none    shift, and go to state 99
    T_true    shift, and go to state 100
    T_false   shift, and go to state 101
    '('       shift, and go to state 102

    LHSorConstant  go to state 113
    Constant       go to state 106
    LHS            go to state 107
    Call           go to state 108


State 104

   44 Product: ProductRest Unit .

    $default  reduce using rule 44 (Product)


State 105

   49 Unit: LHSorConstant .

    $default  reduce using rule 49 (Unit)


State 106

   51 LHSorConstant: Constant .

    $default  reduce using rule 51 (LHSorConstant)


State 107

   50 LHSorConstant: LHS .
   60 LHS: LHS . '.' T_ident
   61    | LHS . '[' Expression ']'
   62 Call: LHS . '(' ArgList ')'

    '('  shift, and go to state 33
    '.'  shift, and go to state 34
    '['  shift, and go to state 35

    $default  reduce using rule 50 (LHSorConstant)


State 108

   52 LHSorConstant: Call .

    $default  reduce using rule 52 (LHSorConstant)


State 109
